# ffmpeg-cpp2

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  ffmpeg-cpp.sln  ffmpeg-cpp.vcxproj  ffmpeg-cpp.vcxproj.filters
VideoWithShaderInfo/: VideoSourceWithShaderInfo.cpp  VideoSourceWithShaderInfo.h  VideoWithShaderInfo.cpp  VideoWithShaderInfo.vcxproj  VideoWithShaderInfo.vcxproj.filters
demos/: CMakeLists.txt
demos/decode_audio/: CMakeLists.txt  compile_me.sh  decode_audio.cpp
demos/decode_video/: CMakeLists.txt  README.md  compile_me.sh  decode_video.cpp
demos/demo/: CMakeLists.txt  GeneratedAudioSource.cpp  compile_me.sh  demo.cpp  demo.vcxproj  demo.vcxproj.filters
demos/difference/: CMakeLists.txt  compile_me.sh  difference.cpp
demos/encode_audio/: CMakeLists.txt  compile_me.sh  encode_audio.cpp
demos/encode_video/: CMakeLists.txt  compile_me.sh  encode_MJPEG_webcam_to_VP9_video.cpp  encode_to_H264_video.cpp  encode_to_MPEG2_video.cpp  encode_to_MPEG4_video.cpp  encode_video.cpp  test.sh
demos/filtering_audio/: CMakeLists.txt  compile_me.sh  filtering_audio.cpp
demos/filtering_video/: CMakeLists.txt  compile_me.sh  filtering_video.cpp
demos/print_info/: CMakeLists.txt  compile_me.sh  print_info.cpp
demos/remuxing/: CMakeLists.txt  compile_me.sh  remuxing.cpp
demos/simple_interface/: CMakeLists.txt  SimpleInterface.cpp  SimpleInterface.h  compile_me.sh
demos/simple_interface_demo/: CMakeLists.txt  compile_me.sh  example.cpp
demos/webcam_to_video/: CMakeLists.txt  README.md  compile_me.sh  getch.c  getch.h  remux.sh  remux_webcam.cpp  remux_webcam_to_MKV.cpp  video_device.h  webcam_stream_to_MKV.cpp  webcam_stream_to_MPEG2.cpp  webcam_stream_to_MPEG4.cpp  webcam_stream_to_SOUND.cpp  webcam_stream_to_VP9.cpp
demos/webcam_to_video/videos/: audio.m4a  output_VP9.mkv
documentation/: links_and_references.txt  vaapi_encode_on_Linux.md
sources/: AudioFormatConverter.cpp  CodecDeducer.cpp  CodecDeducer.h  Codecs.diff  FFmpegException.cpp  FFmpegException.h  FrameContainer.cpp  FrameContainer.h  OpenCodec.cpp  OpenCodec.h  VideoFormatConverter.cpp  VideoFormatConverter.h  changes.diff  changes_83e7327..a4dbc88.diff  cyan-semaphore.h  ffmpeg.h  ffmpegcpp.h
sources/Codecs/: AudioCodec.cpp  AudioCodec.h  Codec.cpp  Codec.h  H264Codec.cpp  H264Codec.h  H264_VAAPICodec.cpp  H264_VAAPICodec.h  JPGCodec.cpp  MJPEGCodec.cpp  MJPEGCodec.h  MPEG4Codec.cpp  PNGCodec.cpp  VideoCodec.cpp  VideoCodec.h  changes.diff
sources/Demuxing/: AudioInputStream.cpp  AudioInputStream.h  InputStream.cpp  InputStream.h  StreamData.h  VideoInputStream.cpp  VideoInputStream.h
sources/FrameSinks/: AudioEncoder.cpp  AudioEncoder.h  Filter.cpp  Filter.h  FrameSinkStream.cpp  FrameSinkStream.h  FrameWriter.h  OneInputFrameSink.cpp  VideoEncoder.cpp  VideoEncoder.h  VideoFilterInput.cpp  (+2 more)
(+83 files in other folders)
